<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/rlDialogViewAs"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_medium_2">

    <androidx.appcompat.widget.AppCompatTextView
...
        android:orientation="vertical"
        android:layout_below="@id/viewLineSeparatorViewAsDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbList"
            android:text="List"
            android:checked="true"
            android:paddingLeft="@dimen/margin_medium_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rbLargeGrid"
            android:text="Large grid"
            android:paddingLeft="@dimen/margin_medium_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <RadioButton
            android:id="@+id/rbSmallGrid"
            android:text="Small grid"
            android:paddingLeft="@dimen/margin_medium_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>

</RelativeLayout>
