<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/rlShelfItem"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBookInShelve"
        android:layout_marginStart="@dimen/margin_medium_2"
        app:srcCompat="@drawable/ic_baseline_insert_drive_file_24"
        android:scaleType="centerCrop"
        android:layout_width="80dp"
        android:layout_height="100dp"/>

    <TextView
        android:id="@+id/tvShelfNameInShelfItem"
        android:text="Gone With The Wind"
        android:layout_toEndOf="@id/ivBookInShelve"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:textSize="@dimen/text_regular_2x"
        android:fontFamily="@font/inter_bold"
        android:layout_width="200dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvBookCountInShelfItem"
        android:text="0 Books"
        android:layout_toEndOf="@id/ivBookInShelve"
        android:layout_alignStart="@id/tvShelfNameInShelfItem"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_below="@id/tvShelfNameInShelfItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/cbShelve"
        android:layout_alignParentEnd="true"
        android:visibility="visible"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_width="@dimen/dimen_50dp"
        android:layout_height="@dimen/dimen_50dp"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivMoreShelve"
        android:layout_alignParentEnd="true"
        android:tint="@color/colorSecondaryText"
        android:visibility="gone"
        android:layout_marginEnd="@dimen/margin_medium_2"
        app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24"
        android:layout_width="@dimen/margin_large"
...
