...
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_new_24"
        app:tint="@color/colorSecondaryText"
        android:layout_width="24dp"
        android:layout_height="24dp" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivMoreShelveBooklist"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginEnd="@dimen/margin_medium_2"
        android:layout_alignParentEnd="true"
        app:srcCompat="@drawable/ic_baseline_more_horiz_24"
        app:tint="@color/colorSecondaryText"
...

    <FrameLayout
        android:id="@+id/flShelfTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvShelveTitle"
            android:text="My Favourite"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:singleLine="true"
            android:textSize="@dimen/text_heading_1x"
            android:visibility="visible"
            android:fontFamily="@font/inter_bold"
            android:layout_below="@id/ivBackShelveBooklist"
            android:layout_marginTop="@dimen/margin_xxlarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtShelveTitle"
            android:text="My Favourite"
            android:visibility="gone"
            android:layout_marginStart="@dimen/margin_medium_2"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:textSize="@dimen/text_heading_1x"
...
            android:minWidth="200dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>

    <TextView
        android:id="@+id/tvBookCountInShelveBooklist"
        android:text="0 books"
        android:layout_marginStart="@dimen/margin_medium_2"
        android:layout_below="@id/flShelfTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

...
